[package]
name = "good-days-to-bike"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.24", features = ["unstable-locales"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
